Drop Elasticsearch 7.x and OpenSearch 1.x support Drop deprecated RestHighLevelClient in tests Drop Spring Boot 3.2 compatibility tests